# clab-platform

./: .env.example  .env.k8s  .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  package.json  pnpm-lock.yaml  pyrightconfig.json  setup.sh  tsconfig.json  turbo.json
.claude/: settings.json
.codex/: instructions.md
control-plane/: .dockerignore  Dockerfile  __init__.py  (+7 more)
knowledge/: pyproject.toml
knowledge/langgraph/knowledge/: __init__.py  agent.py  insights.py  langchain_tools.py  local_store.py  post_k.py  pre_k.py  store.py  types.py
knowledge/langgraph/knowledge/nodes/: __init__.py  insight_node.py  post_k_node.py  pre_k_node.py
knowledge/langgraph/knowledge/services/: __init__.py  doc_searcher.py  integrity_checker.py  keyword_extractor.py
knowledge/tests/: conftest.py  helpers.py  test_insights.py  test_keyword_extractor.py  test_local_store.py  test_post_k.py  test_pre_k.py
local-agent/: README.md  pyproject.toml  requirements.txt  setup.sh
local-agent/graph/: __init__.py  builder.py  executor.py  knowledge.py  planner.py  replanner.py  state.py  verifier.py
local-agent/local_agent/: __init__.py  __main__.py  cli.py  config.py  cp_reporter.py  graph
local-agent/local_agent/checkpoint/: __init__.py  remote_saver.py
local-agent/local_agent/cmux/: __init__.py  bootstrap.py  browser.py  client.py  executor.py  monitor.py  worker.py
local-agent/local_agent/sync/: __init__.py  event_emitter.py  interrupt.py  ws_client.py
local-agent/local_agent/tools/: __init__.py  cli_tools.py  file_tools.py  knowledge_tools.py
(+253 files in other folders)
