[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clab-local-agent"
version = "0.1.0"
description = "clab-platform local agent — LangGraph + cmux runtime"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.1",
    "langchain-anthropic>=0.1",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.scripts]
clab-agent = "local_agent.cli:main"

[tool.setuptools.packages.find]
include = ["local_agent*", "graph*"]
